# coreyja.com

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  IDEAS.md  Procfile  README.md  agentic-threads-jobs.md  agentic-threads-schema.md  agentic-threads-tools.md  agentic-threads-ui.md  agentic-threads-vertical-slices.md  cooking-agent-tools-plan.md  cooking.md  cooking_schema.sql  database-constraints-summary.md  deny.toml  discord-interactive-threads-plan.md  discord-threads-abstraction-analysis.md  discord-threads-changes-summary.md  fly.toml  followups.md  interactive.md  linear.md  linear_tools.md  live.shots.yml  package-lock.json  phase1.md  plan.md  publications.toml  tailwind.config.js  thread-factory-plan.md  transcript-ep003.srt
byte/: Cargo.toml  README.md
byte/migrations/: 20230827170646_CreateTwitchChatters.sql  20230827172537_ChangeTwitchChattersPrefferedToNullable.sql
byte/src/: audio.rs  db.rs  main.rs  tts.rs  twitch.rs  whisper.rs
cja/: Cargo.toml
cja/src/: app_state.rs  lib.rs  setup.rs
db/: Cargo.toml  check_migration_timestamps.sql  fix_migration_timestamps.sql
db/migrations/: 20231125003810_AddUsersAndGithubLinks.sql  20231125034311_AddSessions.sql  20231126005250_AddGithubLoginState.sql  20231209225913_EncryptTheTokens.sql  20231210050948_CreateGithubSponsors.sql  20231210151519_AddJobsTable.sql  20231213020822_OopsAddUniqueIndexToGithubSponsors.sql  20231215152036_AddGoogleUser.sql  20231217021657_CreateLastRefreshAt.sql  20231217022007_CreateYoutubeVideos.sql  20231220005602_RenameTableToPlural.sql  20231220151526_CreateYoutubePlaylists.sql  20231228223757_UseGithubLinkStateForAllLogins.sql  20240228040146_AddCrons.down.sql  20240228040146_AddCrons.up.sql  20240808171731_AddCookdWebhooks.down.sql  20240808171731_AddCookdWebhooks.up.sql  20240809003802_SetDefaultForCookdWebhookId.down.sql  20240809003802_SetDefaultForCookdWebhookId.up.sql  20241006220224_AddDiscordChannels.down.sql  20241006220224_AddDiscordChannels.up.sql  20250108000000_create_linear_tables.down.sql  20250108000000_create_linear_tables.up.sql  202501081400000_add_mode_to_threads.down.sql  202501081400000_add_mode_to_threads.up.sql  202501081401000_add_mode_to_discord_channels.down.sql  202501081401000_add_mode_to_discord_channels.up.sql  20250109000000_add_external_app_id_to_linear.down.sql  20250109000000_add_external_app_id_to_linear.up.sql  20250109000001_rename_app_id_to_actor_id.down.sql  20250109000001_rename_app_id_to_actor_id.up.sql  20250303094143_AddSkeets.down.sql  20250303094143_AddSkeets.up.sql  20250303101334_AddBlueskyColumnsToSkeets.down.sql  20250303101334_AddBlueskyColumnsToSkeets.up.sql  20250303102547_AddUniqueIndexOnBskyUrl.down.sql  20250303102547_AddUniqueIndexOnBskyUrl.up.sql  20250705163048_MakeUserNullable.sql  20250706013459_AddDefaultToSessionId.sql  20250714224853_CreateAgenticThreads.down.sql  (+54 more)
db/src/: discord_threads.rs  lib.rs  linear_threads.rs  skeets.rs  test_utils.rs  twitch_chatters.rs  users.rs
leptos_site/: Cargo.toml  README.md  build.rs  tailwind.config.js
leptos_site/end2end/: package-lock.json
leptos_site/src/: app.rs  lib.rs  main.rs
leptos_site/style/: main.scss  tailwind.css
openai/: Cargo.toml
openai/src/: chat.rs  completion.rs  edit.rs  lib.rs
posts/: Cargo.toml
posts/src/: blog.rs  lib.rs  notes.rs  past_streams.rs  plain.rs  podcast.rs  projects.rs  til.rs
posts/tests/: podcast_tests.rs
server/: Cargo.toml  build.rs  litefs.yml  litestream.yaml  sqlx-data.json
server/.sqlx/: query-089a5a9f15c94bf638a9f7bdbcc9f22a205ecd27efdedb06f131d7df1aeb745c.json  query-113e318e893b339a6754b4ff6d391f6bc98609b7b2c938862f30e68908cc4526.json  query-15264e737bea6724c9d92bd5d2f63803998c3d7526750f8bd52a4e1de02eede0.json  query-15bc713fbfa6d063456d5367c359a2a62dddda9b510fe04bc55f0bc8a9415373.json  query-1847425b83afb1c6b3402cbd3a26d93c086ed4407cad1f72bd4870c8a44af4ed.json  query-304db47721fe3044b4bd505a7f1305469139599f04308da51832638d09a5d045.json  query-3c609569b32c21ff0d1eca2d734a297e6dc4162e19e7a0c730766af5fec49c8b.json  query-3e4f05be736b2a75a78f5c521964c605bf9ee58dbe8707239a10ca627992cd6e.json  query-50cafd5e9455b8fb069b3d3b42ceffb17a70cf580cbde006bc5fd14b1ab0419b.json  query-52acc76e7cd67eaa8849122ddc45a1e26552b9bbc0a7c3fa195e167ad5672bc8.json  query-67277fe16e578605ce220d851dcbbf98ab20f7e20838aae83a4fd3677c72e999.json  query-67d4e49bb4db0018519c78e18b8a222606da6d791ae9c4188a46d5f0347e28a1.json  query-6a83f89200b8d3be71102cc194bee3845917cc19d819c290ecfcada182ff0c10.json  query-7d369511ad2315f55d34427de0f9793f912921c5039afb47caf962ad47470009.json  query-8cb6371ddeff1abf789eb819960f69e8046d571fcafa3797fa54fa6f520b764e.json  query-8e3ffe0d11d3eb38cd805771cd133588c0679404a68a8041f414553226abeeb2.json  query-90154daf417711a4624f41b387019d54e4efc1c24d0e5df72654d59afb498fd2.json  query-91cbb48da130669505a720a25f5c82b53f522a9452de1fccc685c1c7547da3a0.json  query-94293fd779d6c71b801c93c2b96836823399e96cc843b8a0b664ad3a12d3d6e1.json  query-aee733309c85b5ce956583342603188a831d9e8d887d3d55753a5040cca1a399.json  query-b6f5c5508b22561d17f2d7b71404985e90a9b0be9c6d67bbbc48d031d2e2ad95.json  query-b88aff512f5bc64704b9e36470bd41486e767319d2fc35a4a1fe239925b103ab.json  query-bb0470c2b186de8a4e3608e84b05c27c8019be8fac87bf0b244f14a8ed9be923.json  query-bcf7e9adb84a9a0bbab34ef6ee4e8e90795970881c893b7f8c9c4623b835b736.json  query-c3d376801ba872893daf5326d975a0a14c5b3a6d5ac4de3fd79be617d4725e89.json  query-cdeb0c469dc7783162fa1661f8bb0ff05263f498e15b0bad67aea0ee99242f5c.json  query-f2660608e21f7606a8ecc2cc16f825a156042c477c11f933133d0bd7c22c04c4.json  query-f2e83d6779fc2a6b9880f10c16b3434fda05369b7fbd2ce8f077a878b9d713a5.json  query-fc01fba8ed5d7502d683f48ca06db21f805f9723c8c46934935c6b832690926f.json
server/migrations/: 20221117014320_Init.sql  20221117014924_CreateChatters.sql  20221117023239_AddTwitchLinkState.sql  20221117042452_SaveTwitchUserIdToo.sql  20221117151001_CreateGithubLinkStates.sql  20221227180301_AddUserTable.sql  (+3 more)
sitemap-checker/: Cargo.toml
tracing-common/: Cargo.toml
video-toolkit/: Cargo.toml  README.md
(+928 files in other folders)
