[workspace]
members = ["cja", "db", "posts", "server", "tracing-common"]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
blocks_in_conditions = "allow"
must_use_candidate = "allow"
no-effect-underscore-binding = "allow"
items-after-statements = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
clap = { version = "4.2", features = ["derive"] }
reqwest = { version = "0.11.12", features = [
  "json",
  "rustls-tls",
], default-features = false }

tokio = { version = "1.21", features = ["full"] }

tracing = "0.1.37"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
opentelemetry = { version = "0.23.0", features = [], default-features = false }
opentelemetry_sdk = { version = "0.23.0", features = [
  "rt-tokio",
], default-features = false }
opentelemetry-otlp = { version = "0.16.0", features = [
  "http-proto",
  "reqwest-rustls",
  "reqwest-client",
], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4.23", default-features = false, features = ["serde"] }

rss = { version = "2.0", features = ["validation"] }
markdown = "1.0.0-alpha"
include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
path-absolutize = "3.0"

sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "migrate",
  "macros",
  "uuid",
] }

uuid = { version = "1.6.1", features = ["v4", "serde"] }

base64 = "0.21.7"
