[workspace]
members = ["db", "posts", "server"]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
blocks_in_conditions = "allow"
must_use_candidate = "allow"
no-effect-underscore-binding = "allow"
items-after-statements = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
clap = { version = "4.2", features = ["derive"] }
reqwest = { version = "0.11.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

tokio = { version = "1.21", features = ["full"] }

tracing = "0.1.37"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
opentelemetry = { version = "0.23.0", features = [], default-features = false }
opentelemetry-otlp = { version = "0.16.0", features = [
    "http-proto",
    "reqwest-rustls",
    "reqwest-client",
], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4.23", default-features = false, features = ["serde"] }

rss = { version = "2.0", features = ["validation"] }
markdown = "1.0.0-alpha"
include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
path-absolutize = "3.0"

sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "migrate",
    "macros",
    "uuid",
] }

uuid = { version = "1.6.1", features = ["v4", "serde"] }

base64 = "0.21.7"
age = "0.9.2"
async-trait = "0.1.60"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-macros = "0.5.0"
chrono-humanize = "0.2.3"
chrono-tz = "0.9"
cja = { git = "https://github.com/coreyja/cja", branch = "main" }
color-eyre = "0.6.3"
db = { path = "db" }
debug-ignore = "1.0.5"
futures = "0.3.29"
google-youtube3 = "5.0.3"
gql_client = { version = "1.0.8", default-features = false, features = [
    "rustls-tls",
] }
graphql_client = "0.13.0"
indoc = "2.0"
itertools = "0.12.0"
jsonwebtoken = "9.1.0"
maud = "0.27.0"
mime_guess = "2.0"
openai = { path = "openai" }
poise = "0.6.1"
posts = { path = "posts" }
rand = "0.8.5"
regex = "1.11.1"
rsa = "0.9.4"
rsky-lexicon = { git = "https://github.com/blacksky-algorithms/rsky" }
sentry = { version = "0.31.5", default-features = false }
sentry-tower = "0.31.5"
sentry-tracing = "0.31.8"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9"
serenity = { version = "0.12.2", features = ["model"] }
syntect = "5.0"
thiserror = "1.0.44"
tower = "0.4.13"
tower-cookies = "0.11.0"
tower-http = "0.5.0"
two-face = "0.4.0"
typify = "0.0.14"
url = "2.5.0"
urlencoding = "2.1"
vergen = "8.0.0"
