[package]
name = "byte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

tracing-common = { path = "../tracing-common" }
openai = { path = "../openai" }
cpal = "0.15.2"
hound = "3.5.0"
