[package]
name = "cja"
description = "Cron, Jobs and Axum a meta-framework for building web applications"
authors = ["Corey Alexander"]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
async-trait = "0.1.77"
serde_json.workspace = true
chrono.workspace = true
miette.workspace = true
