[package]
name = "cja"
description = "Cron, Jobs and Axum a meta-framework for building web applications"
authors = ["Corey Alexander"]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
miette.workspace = true

axum-core = "0.4.2"
async-trait = "0.1.77"
thiserror = "1.0.56"
tower-cookies = { version = "0.10.0", features = ["signed", "private"] }
http = "1.0.0"
