[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
sqlx = { workspace = true }
tracing = { workspace = true }
color-eyre = "0.6.3"
uuid = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
