[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
sqlx = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bigdecimal = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
