[package]
name = "posts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
test_auth = []

[dependencies]
rss = { workspace = true }
color-eyre = { workspace = true }
chrono = { workspace = true }

serde = { workspace = true }
serde_yaml = { workspace = true }

markdown = { workspace = true }
include_dir = { workspace = true }

path-absolutize = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
