[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "gen_app_keys"
path = "src/generate_app_keys.rs"

[features]
local = []
test_auth = ["posts/test_auth"]

[dependencies]
async-trait = "0.1.60"
axum = "0.8.4"
axum-macros = "0.5.0"
chrono = { workspace = true }
chrono-tz = "0.9"
clap = { workspace = true }
include_dir = { workspace = true }
indoc = "2.0"
markdown = { workspace = true }
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
path-absolutize = { workspace = true }
reqwest = { workspace = true }
rss = { workspace = true }
sentry = { version = "0.31.5", default-features = false, features = [
  "rustls",
  "backtrace",
  "contexts",
  "panic",
  "tower",
  "reqwest",
] }
sentry-tower = { version = "0.31.5", features = ["http"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"
syntect = "5.0"
thiserror = "1.0"
tokio = { workspace = true }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
url = "2.4.0"
urlencoding = "2.1"
uuid.workspace = true

openai = { path = "../openai" }
posts = { path = "../posts" }
db = { path = "../db" }
cja = { git = "https://github.com/coreyja/cja", branch = "main" }


axum-extra = "0.10.1"
sqlx = { workspace = true }
itertools = "0.12.0"
sentry-tracing = "0.31.8"
typify = "0.0.14"
tower-cookies = { version = "0.11.0", features = ["private", "signed"] }
debug-ignore = "1.0.5"
base64.workspace = true
gql_client = { git = "https://github.com/coreyja/gql-client-rs", rev = "d3bcd33" }
jsonwebtoken = "9.1.0"
age = { version = "0.9.2", features = ["async"] }
graphql_client = { version = "0.13.0", features = ["reqwest-rustls"] }
google-youtube3 = "5.0.3"
futures = "0.3.29"
futures-util = "0.3.28"
chrono-humanize = "0.2.3"
rsa = "0.9.4"
rand = "0.8.5"
color-eyre = "0.6.3"
two-face = "0.4.0"
poise = "0.6.1"
serenity = "0.12.2"
regex = "1.11.1"
rsky-lexicon = { git = "https://github.com/blacksky-algorithms/rsky" }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }

[build-dependencies]
vergen = { version = "8.0.0", features = ["git", "gitoxide", "rustc"] }

[lints]
workspace = true
