[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "gen_app_keys"
path = "src/generate_app_keys.rs"

[features]
local = []
test_auth = ["posts/test_auth"]

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { workspace = true }
include_dir = { workspace = true }
indoc = { workspace = true }
markdown = { workspace = true }
maud = { workspace = true, features = ["axum"] }
mime_guess = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
path-absolutize = { workspace = true }
reqwest = { workspace = true }
rss = { workspace = true }
sentry = { workspace = true, features = [
  "rustls",
  "backtrace",
  "contexts",
  "panic",
  "tower",
  "reqwest",
] }
sentry-tower = { workspace = true, features = ["http"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
syntect = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid.workspace = true

openai = { workspace = true }
posts = { workspace = true }
db = { workspace = true }
# cja = { path = "../../cja/crates/cja" }
cja = { workspace = true }

sqlx = { workspace = true }
itertools = { workspace = true }
sentry-tracing = { workspace = true }
typify = { workspace = true }
tower-cookies = { workspace = true, features = ["private", "signed"] }
debug-ignore = { workspace = true }
base64.workspace = true
gql_client = { workspace = true }
jsonwebtoken = { workspace = true }
age = { workspace = true, features = ["async"] }
graphql_client = { workspace = true, features = ["reqwest-rustls"] }
google-youtube3 = { workspace = true }
futures = { workspace = true }
chrono-humanize = { workspace = true }
image = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
color-eyre = { workspace = true }
two-face = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
regex = { workspace = true }
rsky-lexicon = { workspace = true }
axum-extra = { workspace = true }
schemars = "1.0.4"
const_panic = "0.2.12"
static_assertions = "1.1.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
csv = "1.3"
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
vergen = { workspace = true, features = ["git", "gitoxide", "rustc"] }

[lints]
workspace = true
