[package]
name = "tracing-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }

miette = { workspace = true }
