[package]
name = "video-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs = { version = "0.8.0" }
hound = "3.5.0"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"

cacache = { workspace = true }
clap = { workspace = true }
ssri = { workspace = true }
miette = { workspace = true }

tokio = { workspace = true }

tracing = { workspace = true }
tracing-common = { path = "../tracing-common" }

futures = "0.3.28"
