[package]
name = "video-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs = { version = "0.8.0" }
hound = "3.5.0"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"

cacache = { workspace = true }
clap = { workspace = true }
ssri = { workspace = true }
chrono = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

tracing-common = { path = "../tracing-common" }
openai = { path = "../openai" }

futures = "0.3.28"

regex = "1.9.1"
dialoguer = "0.10.4"
google-youtube3 = "5.0.2"
tokio-util = { version = "0.7.8", features = ["io", "io-util"] }
